# ComputerNetworks-Project

./: CMakeLists.txt  README.md  install_tutorial.txt
Client/: CMakeLists.txt  Card.cpp  Card.h  Client.cpp  Client.h  Graphics.cpp  Graphics.h  Includes.h  Resources.h  Room.h  main.cpp
Server/: Bot.h  CMakeLists.txt  Card.h  Includes.h  Player.h  Resources.h  Room.h  Server.cpp  Server.h  main.cpp
